--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,42 @@
 <ion-header>
-    <ion-title>Badges</ion-title>
+    <ion-toolbar>
+        <ion-title>Home</ion-title>
+        <ion-buttons slot="start">
+            <ion-button href="/home">Home</ion-button>
+            <ion-button href="/adv-cards">Maps</ion-button>
+        </ion-buttons>
+      </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
   <ion-card>
+  <img src="assets/img/defina.jpg"/>
 
-    <img src="assets/img/bjork-live.jpg"/>
+  <ion-card-content>
+    <ion-card-title>
+      Marcos Defina
+    </ion-card-title>
+    <p>
+      Defina is a hot mid-level web developer
+    </p>
+  </ion-card-content>
+
+  <ion-item>
+    <ion-icon name='musical-notes' item-start style="color: #d03e84"></ion-icon>
+    Albums
+    <ion-badge item-end>17</ion-badge>
+  </ion-item>
+
+  <ion-item>
+    <ion-icon name='logo-twitter' item-start style="color: #55acee"></ion-icon>
+    Followers
+    <ion-badge item-end>260M</ion-badge>
+  </ion-item>
+</ion-card>
+
+<ion-card>
+
+    <img src="https://raw.githubusercontent.com/ionic-team/ionic-preview-app/master/src/assets/img/bjork-live.jpg"/>
 
     <ion-card-content>
       <ion-card-title>
@@ -30,31 +60,6 @@
     </ion-item>
 
   </ion-card>
-
-  <ion-card>
-  <img src="assets/img/defina.jpg"/>
-
-  <ion-card-content>
-    <ion-card-title>
-      Marcos Defina
-    </ion-card-title>
-    <p>
-      Defina is a hot web dev expert
-    </p>
-  </ion-card-content>
-
-  <ion-item>
-    <ion-icon name='musical-notes' item-start style="color: #d03e84"></ion-icon>
-    Albums
-    <ion-badge item-end>17</ion-badge>
-  </ion-item>
-
-  <ion-item>
-    <ion-icon name='logo-twitter' item-start style="color: #55acee"></ion-icon>
-    Followers
-    <ion-badge item-end>260M</ion-badge>
-  </ion-item>
-</ion-card>
 
   </ion-content>
 
